--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -1,4 +1,200 @@
-.clients-section {
+@media screen and (max-width:767px) {
+    .clients-section {
+        padding-top: 0px;
+        padding-bottom: 60px;
+    
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+        }
+    
+        &__item {
+            flex-wrap: wrap;
+            padding: 0;
+            margin: 0;
+            border-radius: 4px;
+            border: 1px solid var(--color-border-icon);
+            width: 210px;
+            height: 92px;
+            display: flex;
+            fill: var(--color-icon-clients) ;
+    
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &__item:hover,
+        &__item:focus {
+            fill: var(--color-icon-clients-hover) ;
+            border: 1px solid var(--color-border-hover);
+        }
+    
+        
+    
+        &__logo {
+            width: 106px;
+            height: 60px;
+            list-style: none;
+        }
+    
+        &__link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 92px;
+        }
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .clients-section {
+    padding-top: 0px;
+    padding-bottom: 60px;
+
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    &__item {
+        flex-wrap: wrap;
+        padding: 0;
+        margin: 0;
+        border-radius: 4px;
+        border: 1px solid var(--color-border-icon);
+        width: 210px;
+        height: 92px;
+        display: flex;
+        fill: var(--color-icon-clients) ;
+
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__item:hover,
+    &__item:focus {
+        fill: var(--color-icon-clients-hover) ;
+        border: 1px solid var(--color-border-hover);
+    }
+
+    
+
+    &__logo {
+        width: 106px;
+        height: 60px;
+        list-style: none;
+    }
+
+    &__link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 92px;
+    }
+}
+}
+@media screen and (min-width: 768px) {
+    .clients-section {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    
+        &__list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 30px;
+        }
+    
+        &__item {
+            flex-wrap: wrap;
+            padding: 0;
+            margin: 0;
+            border-radius: 4px;
+            border: 1px solid var(--color-border-icon);
+            width: 226px;
+            height: 92px;
+            display: flex;
+            fill: var(--color-icon-clients) ;
+    
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &__item:hover,
+        &__item:focus {
+            fill: var(--color-icon-clients-hover) ;
+            border: 1px solid var(--color-border-hover);
+        }
+    
+        
+    
+        &__logo {
+            width: 106px;
+            height: 60px;
+            list-style: none;
+        }
+    
+        &__link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 92px;
+        }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .clients-section {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    
+        &__list {
+            display: flex;
+           
+        }
+    
+        &__item {
+            flex-wrap: wrap;
+            padding: 0;
+            margin: 0;
+            border-radius: 4px;
+            border: 1px solid var(--color-border-icon);
+            width: 170px;
+            height: 92px;
+            display: flex;
+            fill: var(--color-icon-clients) ;
+    
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &__item:hover,
+        &__item:focus {
+            fill: var(--color-icon-clients-hover) ;
+            border: 1px solid var(--color-border-hover);
+        }
+    
+        &__item + &__item {
+        margin-left: 30px;
+        }
+    
+        &__logo {
+            width: 106px;
+            height: 60px;
+            list-style: none;
+        }
+    
+        &__link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 170px;
+            height: 92px;
+        }
+    }
+}
+
+/*.clients-section {
     padding-top: 94px;
     padding-bottom: 94px;
 
@@ -44,4 +240,4 @@
         height: 92px;
     }
 }
-
+*/
