--- a/sass/components/_do-section.scss
+++ b/sass/components/_do-section.scss
@@ -1,4 +1,74 @@
-.do-section {
+@media screen and (max-width:768px) {
+    .do-section {
+        display: none;
+    }
+
+    .do-section-do {
+        display: none;
+    }
+}
+/*@media screen and (min-width:768px) {
+    .do-section {
+        display: none;
+    }
+
+    .do-section-do {
+        display: none;
+    }
+}*/
+
+@media screen and (min-width:1200px) {
+    .do-section {
+        padding-top: 0px;
+        padding-bottom: 94px;
+    
+        &__list {
+            display: flex;
+        }
+    
+        &__item {
+            flex-wrap: wrap;
+        }
+    
+        &__item + &__item {
+            margin-left: 30px;
+        }
+    }
+    
+    .do-thumb {
+        position: relative;
+        display: flex;
+        width: 370px;
+        margin:0 auto;
+        padding: 0px;       
+    
+        &__list {
+            position: absolute;
+            display: flex;
+            width: 370px;
+            height: 71px;
+            justify-content: center;
+            align-items: center;
+            background: rgba(47, 48, 58, 0.8);
+            bottom: 0px;
+        }
+    
+        &__description {
+            font-family: var(--font-family-primary);
+            color: var(--color-do-text) ;
+            size: 14px;
+            font-weight: 700;
+            font-style: normal;
+            font-size: 14px;
+            line-height: 1.1428;
+            text-align: center;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+        }
+    }
+}
+
+/*.do-section {
     padding-top: 0px;
     padding-bottom: 94px;
 
@@ -45,4 +115,4 @@
         letter-spacing: 0.03em;
         text-transform: uppercase;
     }
-} 
+} */
