--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,4 +1,100 @@
-.title {
+@media screen and (max-width:767px) {
+    .title {
+        color: var(--color-primary);
+        font-family: var(--font-family-primary);
+        font-size: 28px;
+        line-height: 1.1785;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: 0.06em;
+        margin-bottom: 30px;
+    }
+    
+    .title-form {
+        font-family: var(--font-family-primary);
+        color: var(-color-modal-form-text-title);
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        margin-bottom: 10px;
+        letter-spacing: 0.03em;
+    }   
+}
+
+@media screen and (min-width: 480px) {
+    .title {
+        color: var(--color-primary);
+        font-family: var(--font-family-primary);
+        font-size: 28px;
+        line-height: 1.1785;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: 0.06em;
+        margin-bottom: 30px;
+    }
+    
+    .title-form {
+        font-family: var(--font-family-primary);
+        color: var(-color-modal-form-text-title);
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        margin-bottom: 10px;
+        letter-spacing: 0.03em;
+    }   
+}
+
+@media screen and (min-width: 768px) {
+    .title {
+        color: var(--color-primary);
+        font-family: var(--font-family-primary);
+        font-size: 28px;
+        line-height: 1.1785;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: 0.06em;
+        margin-bottom: 30px;
+    }
+    
+    .title-form {
+        font-family: var(--font-family-primary);
+        color: var(-color-modal-form-text-title);
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        margin-bottom: 10px;
+        letter-spacing: 0.03em;
+    }   
+}
+
+@media screen and (min-width: 1200px) {
+    .title {
+        color: var(--color-primary);
+        font-family: var(--font-family-primary);
+        font-size: 36px;
+        line-height: 0.8571;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: 0.06em;
+        margin-bottom: 50px;
+    }
+    
+    .title-form {
+        font-family: var(--font-family-primary);
+        color: var(-color-modal-form-text-title);
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        margin-bottom: 10px;
+        letter-spacing: 0.03em;
+    }
+}
+
+/*.title {
     color: var(--color-primary);
     font-family: var(--font-family-primary);
     font-size: 36px;
@@ -18,4 +114,4 @@
     text-align: center;
     margin-bottom: 10px;
     letter-spacing: 0.03em;
-}
+}*/
