--- a/sass/utils/_overlay.scss
+++ b/sass/utils/_overlay.scss
@@ -63,7 +63,7 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
            ),
-           url(../images/Headerimg-desktop.jpg);
+           url(../../images/headerimage-desktop.jpg);
      }
 }
 
@@ -77,7 +77,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px) {
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
            ),
-           url(/images/Headerimg-desktop@2x.jpg);
+           url(../../images/headerimage-desktop@2x.jpg);
      }
 }
 
