--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -7,6 +7,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 30px;
+            justify-content: center;
         }
     
         &__item {
@@ -56,6 +57,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: 30px;
+        
     }
 
     &__item {
