--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,255 @@
+@media screen and (max-width: 767px) {
+    footer {
+        background-color: var(--color-background-secondary);
+        padding: 60px 0;    
+    }
+    
+    .footer__inner {
+        display: flex;
+        flex-direction: column;   
+        align-items: center;   
+    }
+    
+    .footer__logo {
+        font-family: var(--font-family-logo) ;
+        color: var(--color-background-fourth);
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.1923;
+        text-decoration: none;
+        margin-bottom: 20px;
+        display: block;
+    }
+    
+    .logo-footer-text {
+        font-family: var(--font-family-logo) ;
+        color: var(--color-logo-footer);
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.1923;
+        text-decoration: none;
+    }
+    
+    .footer-contacts {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0px;
+        margin-bottom: 60px;
+        
+    }
+    
+    .footer-contacts-list {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .footer-contacts__item {
+        display: block;
+        text-align: center;
+    }
+    
+    .footer-contacts__item + .footer-contacts__item {
+        margin-top: 9px;
+    }
+    
+    .footer-contacts__link--start {
+        color: var(--color-secondary); 
+        font-weight: 400;
+        text-decoration: none;
+        line-height: 1.7142;
+        text-align: center;
+        font-style: normal;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .footer-contacts__link {
+        color: var(--color-fourth);
+        text-decoration: none;
+        font-weight: 400;
+        line-height: 1.7142;
+        text-align: center;
+        font-style: normal;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .footer-contacts__link--start:hover,
+    .footer-contacts__link:hover {
+        color: var(--color);
+    }
+    
+    .footer-contacts__link--start:focus,
+    .footer-contacts__link:focus {
+        color: var(--color);
+    }
+    
+    .footer-social__list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin-bottom: 60px;
+    }
+    
+    .footer-social__link {
+        color: var(--color-icon-footer) ;
+        background-color: rgba(255, 255, 255, 0.1);
+        border: none;
+        border-radius: 50%;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        cursor: pointer; 
+        align-items: center;
+        justify-content: center;
+    
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .footer-social__link:hover,
+    .footer-social__link:focus {
+        background-color: var(--color-background-icon-hover);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    
+    .footer-social__icon {
+        width: 20px;
+        height: 18px;
+        fill: var(--color-icon-footer);
+    
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);        
+    }
+    
+    .footer-social__icon:hover,
+    .footer-social__icon:focus {
+        fill: var(--color-icon-hover);
+    }
+    
+    .footer-social__item {
+        width: 44px;
+        height: 44px;
+        display: flex;       
+    }
+    
+    .footer-social__item + .footer-social__item {
+        margin-left: 10px;
+    }
+    
+    .footer__description {
+        text-transform: uppercase;    
+        font-family: var(--font-family-primary);
+        color: var(--color-secondary);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.1428;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    .footer__form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0px;
+        
+    }
+    
+    .form-field-footer {    
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 6px;
+        padding: 0;
+        align-items: center;
+        
+        position: relative;    
+    }
+    
+    .form-field-footer__input {
+        margin: 0;
+        padding: 15px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: 50px;
+        background-color: #2F303A;    
+        text-align: left;  
+        font-family: var(--font-family-primary);
+        color: var(--color-footer-email-text);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        outline: none;
+    }
+    
+    .form-field-footer__label {
+        
+    }
+    
+    .form-field-footer__button-submit {
+        padding: 10px 29px;
+        color: var(--color-footer-button-submit-text) ;
+        background-color: var(--color-background-footer-button-submit);
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        font-family: inherit;
+        line-height: 1.875;
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 0.06em;
+        cursor: pointer;
+        display: inline-flex;
+        margin: 0 auto;
+        position: absolute;
+        width: 200px;
+        height: 50px;
+    }
+    
+    .form-field-footer__button-submit::after {
+        content: '';
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        background-color: var(--color-link-underline);
+        position: absolute;
+        right: 28px;
+        margin-left: 10px;
+    }
+    
+    .form-field-footer__button-icon {
+        position: absolute;
+        bottom: 11px;
+        left: 148px;
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        fill: var(--color-footer-form-icon);
+    }
+    
+    /*.footer__inner + .footer__inner {
+        margin-left: 70px;
+    }*/
+    
+    .form-field-footer__input::placeholder {
+        text-align: left;         
+        font-family: var(--font-family-primary);
+        color: var(--color-footer-email-text);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;    
+    }
+}
 @media screen and (min-width: 480px) {
     footer {
         background-color: var(--color-background-secondary);
@@ -151,7 +403,7 @@
     .footer__form {
         display: flex;
         flex-direction: column;
-        width: 570px;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
         padding: 0px;
@@ -163,6 +415,7 @@
         flex-direction: column;
         margin-bottom: 0px;
         padding: 0;
+        align-items: center;
         
         position: relative;    
     }
@@ -173,8 +426,9 @@
         border: 1px solid rgba(255, 255, 255, 0.3);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
-        margin-right: 12px;
-        width: 358px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+        width: 100%;
         height: 50px;
         background-color: #2F303A;    
         text-align: left;  
@@ -247,7 +501,258 @@
         letter-spacing: 0.03em;    
     }
 }
-@media screen and (min-width: 768px) {}
+@media screen and (min-width: 768px) {
+    footer {
+        background-color: var(--color-background-secondary);
+        padding: 60px 0;    
+    }
+    
+    .footer__inner {
+        display: flex;
+        flex-direction: column;   
+        align-items: center;   
+    }
+    
+    .footer__logo {
+        font-family: var(--font-family-logo) ;
+        color: var(--color-background-fourth);
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.1923;
+        text-decoration: none;
+        margin-bottom: 20px;
+        display: block;
+    }
+    
+    .logo-footer-text {
+        font-family: var(--font-family-logo) ;
+        color: var(--color-logo-footer);
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 1.1923;
+        text-decoration: none;
+    }
+    
+    .footer-contacts {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0px;
+        margin-bottom: 60px;
+        
+    }
+    
+    .footer-contacts-list {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .footer-contacts__item {
+        display: block;
+        text-align: center;
+    }
+    
+    .footer-contacts__item + .footer-contacts__item {
+        margin-top: 9px;
+    }
+    
+    .footer-contacts__link--start {
+        color: var(--color-secondary); 
+        font-weight: 400;
+        text-decoration: none;
+        line-height: 1.7142;
+        text-align: center;
+        font-style: normal;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .footer-contacts__link {
+        color: var(--color-fourth);
+        text-decoration: none;
+        font-weight: 400;
+        line-height: 1.7142;
+        text-align: center;
+        font-style: normal;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .footer-contacts__link--start:hover,
+    .footer-contacts__link:hover {
+        color: var(--color);
+    }
+    
+    .footer-contacts__link--start:focus,
+    .footer-contacts__link:focus {
+        color: var(--color);
+    }
+    
+    .footer-social__list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin-bottom: 60px;
+    }
+    
+    .footer-social__link {
+        color: var(--color-icon-footer) ;
+        background-color: rgba(255, 255, 255, 0.1);
+        border: none;
+        border-radius: 50%;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        cursor: pointer; 
+        align-items: center;
+        justify-content: center;
+    
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .footer-social__link:hover,
+    .footer-social__link:focus {
+        background-color: var(--color-background-icon-hover);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    
+    .footer-social__icon {
+        width: 20px;
+        height: 18px;
+        fill: var(--color-icon-footer);
+    
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);        
+    }
+    
+    .footer-social__icon:hover,
+    .footer-social__icon:focus {
+        fill: var(--color-icon-hover);
+    }
+    
+    .footer-social__item {
+        width: 44px;
+        height: 44px;
+        display: flex;       
+    }
+    
+    .footer-social__item + .footer-social__item {
+        margin-left: 10px;
+    }
+    
+    .footer__description {
+        text-transform: uppercase;    
+        font-family: var(--font-family-primary);
+        color: var(--color-secondary);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.1428;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    
+    .footer__form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0px;
+        
+    }
+    
+    .form-field-footer {    
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 6px;
+        padding: 0;
+        align-items: center;
+        
+        position: relative;    
+    }
+    
+    .form-field-footer__input {
+        margin: 0;
+        padding: 15px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        margin-right: 0px;
+        margin-bottom: 20px;
+        width: 100%;
+        height: 50px;
+        background-color: #2F303A;    
+        text-align: left;  
+        font-family: var(--font-family-primary);
+        color: var(--color-footer-email-text);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;
+        outline: none;
+    }
+    
+    .form-field-footer__label {
+        
+    }
+    
+    .form-field-footer__button-submit {
+        padding: 10px 29px;
+        color: var(--color-footer-button-submit-text) ;
+        background-color: var(--color-background-footer-button-submit);
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        font-family: inherit;
+        line-height: 1.875;
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 0.06em;
+        cursor: pointer;
+        display: inline-flex;
+        margin: 0 auto;
+        position: absolute;
+        width: 200px;
+        height: 50px;
+    }
+    
+    .form-field-footer__button-submit::after {
+        content: '';
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        background-color: var(--color-link-underline);
+        position: absolute;
+        right: 28px;
+        margin-left: 10px;
+    }
+    
+    .form-field-footer__button-icon {
+        position: absolute;
+        bottom: 11px;
+        left: 148px;
+        display: inline-block;
+        width: 24px;
+        height: 24px;
+        fill: var(--color-footer-form-icon);
+    }
+    
+    /*.footer__inner + .footer__inner {
+        margin-left: 70px;
+    }*/
+    
+    .form-field-footer__input::placeholder {
+        text-align: left;         
+        font-family: var(--font-family-primary);
+        color: var(--color-footer-email-text);
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        letter-spacing: 0.03em;    
+    }
+}
 @media screen and (min-width: 1200px) {
     footer {
         background-color: var(--color-background-secondary);
