--- a/sass/layout/_menu-contacts.scss
+++ b/sass/layout/_menu-contacts.scss
@@ -9,11 +9,14 @@
         display: flex;
         align-items: center;
         margin-left: auto;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
     }
     
-    .menu-contacts__item + .menu-contacts__item {
+    /*.menu-contacts__item + .menu-contacts__item {
         margin-left: 50px;
-    }
+    }*/
     
     .menu-contacts__link {
         color: var(--color-third);
@@ -23,8 +26,8 @@
         text-align: left;
         display: flex;
         align-items: center;
-        padding-top: 32px;
-        padding-bottom: 32px;
+        /*padding-top: 32px;
+        padding-bottom: 32px;*/
         letter-spacing: 0.02em;
     
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
