--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -1,4 +1,265 @@
-.backdrop {
+@media screen and (max-width:767px) {
+    .backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 609px;
+        background-color: rgba(0, 0, 0, 0.2);
+        transition: opacity 0.5s, visibility 0.5s;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);    
+    }
+    
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        background-color: var(--color-background-modal);
+        border-radius: 4px;
+        padding: 40px;    
+    }
+    
+    .modal__button {
+        position: absolute;
+        top: 14px;
+        right: 14px;
+        fill: black;
+        background-color: var(--color-background-button-modal);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;    
+    }
+        
+    .modal__button-close {
+        width: 18px;
+        height: 18px;
+        fill: black;
+    
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .modal__button-close:hover {
+        fill: var(--color-modal-icon-X);    
+    }
+    
+    .form-field__modal-icon {
+        position: absolute;
+        bottom: 11px;
+        left: 12px;
+        right: 12px;
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        background-color: #FFFFFF;
+        fill: var(--color-modal-icon);
+    }
+    
+    
+    .button-modal-submit {
+        padding: 10px 55px;
+        color: var(--color-modal-button-submit-text) ;
+        background-color: var(--color-background-modal-button-submit);
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        font-family: inherit;
+        line-height: 1.875;
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 0.06em;
+        cursor: pointer;
+        display: inline-block;
+        margin: 0 auto;
+        position: relative;      
+    }
+}
+
+@media screen and (min-width:768px) {
+    .backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.2);
+        transition: opacity 0.5s, visibility 0.5s;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);    
+    }
+    
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 450px;
+        height: 609px;
+        background-color: var(--color-background-modal);
+        border-radius: 4px;
+        padding: 40px;    
+    }
+    
+    .modal__button {
+        position: absolute;
+        top: 14px;
+        right: 14px;
+        fill: black;
+        background-color: var(--color-background-button-modal);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;    
+    }
+        
+    .modal__button-close {
+        width: 18px;
+        height: 18px;
+        fill: black;
+    
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .modal__button-close:hover {
+        fill: var(--color-modal-icon-X);    
+    }
+    
+    .form-field__modal-icon {
+        position: absolute;
+        bottom: 11px;
+        left: 12px;
+        right: 12px;
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        background-color: #FFFFFF;
+        fill: var(--color-modal-icon);
+    }
+    
+    
+    .button-modal-submit {
+        padding: 10px 55px;
+        color: var(--color-modal-button-submit-text) ;
+        background-color: var(--color-background-modal-button-submit);
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        font-family: inherit;
+        line-height: 1.875;
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 0.06em;
+        cursor: pointer;
+        display: inline-block;
+        margin: 0 auto;
+        position: relative;      
+    }
+}
+
+@media screen and (min-width:1200px) {
+    .backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.2);
+        transition: opacity 0.5s, visibility 0.5s;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);    
+    }
+    
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 528px;
+        height: 581px;
+        background-color: var(--color-background-modal);
+        border-radius: 4px;
+        padding: 40px;    
+    }
+    
+    .modal__button {
+        position: absolute;
+        top: 14px;
+        right: 14px;
+        fill: black;
+        background-color: var(--color-background-button-modal);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;    
+    }
+        
+    .modal__button-close {
+        width: 18px;
+        height: 18px;
+        fill: black;
+    
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .modal__button-close:hover {
+        fill: var(--color-modal-icon-X);    
+    }
+    
+    .form-field__modal-icon {
+        position: absolute;
+        bottom: 11px;
+        left: 12px;
+        right: 12px;
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        background-color: #FFFFFF;
+        fill: var(--color-modal-icon);
+    }
+    
+    
+    .button-modal-submit {
+        padding: 10px 55px;
+        color: var(--color-modal-button-submit-text) ;
+        background-color: var(--color-background-modal-button-submit);
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        text-align: center;
+        font-family: inherit;
+        line-height: 1.875;
+        font-weight: 700;
+        font-size: 16px;
+        letter-spacing: 0.06em;
+        cursor: pointer;
+        display: inline-block;
+        margin: 0 auto;
+        position: relative;      
+    }
+}
+
+/*.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -81,4 +342,4 @@
     display: inline-block;
     margin: 0 auto;
     position: relative;      
-}
+}*/
